src/test/ui/moves/moves-based-on-type-block-bad.stderr
error[E0507]: cannot move out of `hellothere.x.0` which is behind a shared reference
  --> $DIR/moves-based-on-type-block-bad.rs:22:19
   |
LL |             match hellothere.x {
   |                   ^^^^^^^^^^^^ help: consider borrowing here: `&hellothere.x`
LL |                 box E::Foo(_) => {}
LL |                 box E::Bar(x) => println!("{}", x.to_string()),
   |                            -
   |                            |
   |                            data moved here
   |                            move occurs because `x` has type `std::boxed::Box<isize>`, which does not implement the `Copy` trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
